feat: multiple conversation histories